# cmake

cmake/: compiler_gcc.cmake  compiler_icc.cmake  compiler_msvc.cmake  config.cmake  macros_check_build_dir.cmake  macros_check_platform.cmake  macros_ensure_version.cmake  macros_fnd_mysql.cmake  macros_msvc.cmake  platform_osx.cmake  platform_settings.cmake  platform_unix.cmake  platform_win.cmake
example/example-lib/: CMakeLists.txt
example/example-lib/include/: mathFunctions.h
example/example-lib/src/: mathFunctions.cpp
